# gen-ai

./: .gitignore  README.md  notes.md  pyproject.toml
notebooks/: ch1-llm.ipynb
