[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.1",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-mistralai>=0.2.9",
    "langgraph>=0.3.20",
    "torch>=2.6.0",
    "transformers>=4.50.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
